--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,16 +1,16 @@
 #每天需要投币的数量 [0,1,5]。
 coin: 0
 #送出即将过期礼物 [true,false]
-gift: true
+gift: false
 #银瓜子兑换为硬币 [true,false]
 s2c: true
 #月底自动使用B币卷 [{0,自己会使用},{1,给自己充电},{2,兑换成金瓜子}]
-autoBiCoin: 0
+autoBiCoin: 1
 #用户设备的标识 [android,ios]
 platform: ios
 # 自定义优先给这些 up 的视频投币 , 以yml数组的形式 , 填写其 uid (mid)
-upList: uid (53456)
+upList: 452907741
 #进行漫画签到任务 [true,false]
 manga: true
 #优先送出即将过期礼物给此up的直播间,填写其 uid
-upLive:
+upLive:477137547
